# pythonic-core-cpp

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  pythonic_core.pyi  setup.py
.github/workflows/: build.yml
src/: pythonic_core.cpp
