[build-system]
requires = ["setuptools>=59", "pybind11>=2.12.0"]
build-backend = "setuptools.build_meta"


[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "I",   # isort
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific
    "UP",  # pyupgrade
]
