[build-system]
requires = [
    "setuptools>=59",
    "pybind11>=2.12.0",
    "wheel",
    "cibuildwheel>=1.1.0",
]
build-backend = "setuptools.build_meta"

[[tool.cibuildwheel.overrides]]
select = "cp3{9,10,11}-*"
manylinux-x86_64-image = "manylinux2014"

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "I",   # isort
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific
    "UP",  # pyupgrade
]
